Day-5/main.tf
# Define the AWS provider configuration.
provider "aws" {
  region = "us-east-2" # Replace with your desired AWS region.
}

variable "cidr" {
  default = "10.0.0.0/16"
}

resource "aws_key_pair" "example" {
  key_name   = "terraform-demo-sudhamsh"           # Replace with your desired key name
  public_key = file("/Users/mars/.ssh/id_rsa.pub") # Replace with the path to your public key file
}

resource "aws_vpc" "myvpc" {
  cidr_block = var.cidr
}

resource "aws_subnet" "sub1" {
  vpc_id                  = aws_vpc.myvpc.id
  cidr_block              = "10.0.0.0/24"
  map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.myvpc.id
}

resource "aws_route_table" "RT" {
  vpc_id = aws_vpc.myvpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "rta1" {
  subnet_id      = aws_subnet.sub1.id
  route_table_id = aws_route_table.RT.id
}

resource "aws_security_group" "webSg" {
  name   = "web"
  vpc_id = aws_vpc.myvpc.id

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Web-sg"
  }
}

resource "aws_instance" "server" {
  ami                    = "ami-085f9c64a9b75eed5"
  instance_type          = "t2.micro"
  key_name               = aws_key_pair.example.key_name
  vpc_security_group_ids = [aws_security_group.webSg.id]
  subnet_id              = aws_subnet.sub1.id

  connection {
    type        = "ssh"
    user        = "ubuntu"                        # Replace with the appropriate username for your EC2 instance
    private_key = file("/Users/mars/.ssh/id_rsa") # Replace with the path to your private key
    host        = self.public_ip
  }

  # File provisioner to copy a file from local to the remote EC2 instance
  provisioner "file" {
    source      = "/Users/mars/SUCHETLA/sudhamsh-terraform-folder/sudhamsh-mars-terraform/Day-5/app.py" # Replace with the path to your local file
    destination = "/home/ubuntu/app.py"                                                                 # Replace with the path on the remote instance
  }

  provisioner "remote-exec" {
    inline = [
        "sudo apt-get update -y",
        "sudo apt-get install -y python3-pip python3-venv",

        # Navigate to the home directory
        "cd /home/ubuntu",

        # Create a virtual environment
        "python3 -m venv myenv",

        # Install Flask in the virtual environment
        "/home/ubuntu/myenv/bin/pip install --upgrade pip",
        "/home/ubuntu/myenv/bin/pip install flask",

        # Run the Flask application in the background
        "nohup /home/ubuntu/myenv/bin/python3 app.py &"

    ]
  }
}
